Corrected case in path to site.css in index.html and login.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
   <!-- Your Site CSS -->
-  <link rel="stylesheet" href="/CSS/site.css">
+  <link rel="stylesheet" href="/css/site.css">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- jQuery + Bootstrap Bundle -->
@@ -59,7 +59,8 @@
           
             <img class="logo me-2" src="/assets/images/logo-sgaz-navbar-active-1200.png" height="80" width="40" alt="Sonoran Games Logo">
             <a href="https://www.jchleborad.com" target="_blank" rel="noopener">
-              <img class="logo-chleb" src="/assets/images/chleb-c-logo.png" height="80" width="40" alt="John Chleborad Logo">
+              <!--<img class="logo-chleb" src="/assets/images/logo-chleb-c.png" height="80" width="40" alt="John Chleborad Logo">-->
+          <img class="logo-chleb-nav" src="/assets/images/logo-jchleborad.png" alt="John Chleborad Logo">
             </a>
           
         </a>
