--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -156,15 +156,24 @@
   </div>
 </div>
 
-<footer class="footer-full text-white bg-dark text-center py-2">
-  <div class="container">
-    <small>&copy; Project605&trade; 2025 NFLPool</small>
+<footer class="footer-full text-white bg-dark py-2">
+  <div class="text-center">
+    <span class="footer-title">
+      &copy;
+      <a href="https://www.jchleborad.com/project605" target="_blank" class="text-white text-decoration-none font-weight-bold">
+        Project605&trade;
+      </a>
+      2025 NFLPool
+    </span>
+    <br>
+    <a href="https://www.jchleborad.com" target="_blank">
+      <img src="/assets/images/logo-jchleborad.png" alt="JChleborad.com Logo" class="logo-chleb-footer mt-1">
+    </a>
   </div>
 </footer>
 
 <!-- Ensure absolute path to script file -->
 <script src="../scripts/nflpool-data.js"></script>
-
 
 <script>
   $(document).ready(function () {
