Tweaked styling for nflpool.html, index.html  and login.html for better UX in both desktop and mobile

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -129,7 +129,7 @@
         </a>
       </div>
 
-      <div id="week-title-container" class="my-3">
+      <div id="week-title-container">
         <!-- Week title will be injected here by JS -->
       </div>
 
