Removed Jchleborad logo and hyperllink on mobile in index.html

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -112,7 +112,7 @@
           <!--REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn ml-3">
           BUTTON DISABLED:  class="btn nfl-btn ml-3" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn ml-3" disabled>Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn ml-3">Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
