--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
       <div class="container-fluid">
 
         <a class="navbar-brand d-flex align-items-center" href="/">
-          
-            <img class="logo me-2" src="/assets/images/logo-sgaz-navbar-active-1200.png" height="80" width="40" alt="Sonoran Games Logo">
-            <a href="https://www.jchleborad.com" target="_blank" rel="noopener">
-              <!--<img class="logo-chleb" src="/assets/images/logo-chleb-c.png" height="80" width="40" alt="John Chleborad Logo">-->
-          <img class="logo-chleb-nav" src="/assets/images/logo-jchleborad.png" alt="John Chleborad Logo">
-            </a>
-          
+          <img class="logo me-2" src="/assets/images/logo-sgaz-navbar-active-1200.png" height="80" width="40" alt="Sonoran Games Logo">
         </a>
+        <span class="d-none d-md-inline">
+          <a href="https://www.jchleborad.com" target="_blank" rel="noopener">
+            <img class="logo-chleb-nav" src="/assets/images/logo-jchleborad.png" alt="John Chleborad Logo">
+          </a>
+        </span>
 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
