Adjust display of jchleborad logo in Navbar to hide at screen size of 950 or smaller

--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
         <a class="navbar-brand d-flex align-items-center" href="/">
           <img class="logo me-2" src="/assets/images/logo-sgaz-navbar-active-1200.png" height="80" width="40" alt="Sonoran Games Logo">
         </a>
-        <span class="d-none d-md-inline">
+        <span class="logo-jch-wrapper">
           <a href="https://www.jchleborad.com" target="_blank" rel="noopener">
             <img class="logo-chleb-nav" src="/assets/images/logo-jchleborad.png" alt="John Chleborad Logo">
           </a>
         </span>
-
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
           <span class="navbar-toggler-icon"></span>
