--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -133,22 +133,46 @@
       </div>
 
       <section id="live-matchups" class="nfl-section nfl-matchups text-center">
-        <h1>Matchups</h1>
+        <h1>This Week's Matchups</h1>
         <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">Loading matchups...</div>
       </section>
 
       <section id="live-results" class="nfl-section nfl-results text-center">
-        <h1>Results</h1>
+        <h1>This Week's Results</h1>
         <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">Loading results...</div>
       </section>
 
+      <!--SINGLE STANDINGS SECTION
       <section id="live-standings" class="nfl-section nfl-standings text-center">
-        <h1>Season Standings</h1>
+        <h1>Player Standings</h1>
         <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading standings...</div>
       </section>
+      -->
+
+
+      <section class="nfl-section nfl-standings text-center">
+        <div class="row">
+          <!-- Season Standings -->
+          <!-- Previous Week Player Results -->
+          <div class="col-md-6 col-12 mb-4">
+            <h1>Previous Week Player Scores</h1>
+            <div id="previous-results-table-container" class="table-responsive mt-0 loading-placeholder">
+              <!-- Placeholder content for now -->
+              <h3>Coming soon...</h3>
+            </div>
+          </div>
+          <div class="col-md-6 col-12 mb-4">
+            <h1>Player Season Standings</h1>
+            <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading standings...</div>
+          </div>
+
+        </div>
+      </section>
+
+
 
       <section id="player-picks" class="nfl-section text-center" style="display: none;">
-        <h1>Player Picks</h1>
+        <h1>Player Picks for Current Week</h1>
         <div id="player-picks-table-container" class="table-responsive mt-0 loading-placeholder">Loading player picks...</div>
       </section>
     </div>
