Changed section to Player Scores for the Week

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -155,8 +155,8 @@
           <!-- Season Standings -->
           <!-- Previous Week Player Results -->
           <div class="col-md-6 col-12 mb-4">
-            <h1>Previous Week Player Scores</h1>
-            <div id="previous-results-table-container" class="table-responsive mt-0 loading-placeholder">
+            <h1>Player Scores for the Week</h1>
+            <div id="weekly-player-scores-table-container" class="table-responsive mt-0 loading-placeholder">
               <!-- Placeholder content for now -->
               <h3>Coming soon...</h3>
             </div>
@@ -168,8 +168,6 @@
 
         </div>
       </section>
-
-
 
       <section id="player-picks" class="nfl-section text-center" style="display: none;">
         <h1>Player Picks for Current Week</h1>
