Changed titles of player scoring sections

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -149,21 +149,20 @@
       </section>
       -->
 
-
       <section class="nfl-section nfl-standings text-center">
         <div class="row">
           <!-- Season Standings -->
           <!-- Previous Week Player Results -->
           <div class="col-md-6 col-12 mb-4">
-            <h1>Player Scores for the Week</h1>
-            <div id="weekly-player-scores-table-container" class="table-responsive mt-0 loading-placeholder">
+            <h1>Cumulative Scoring</h1>
+            <div id="cumulative-scoring-table-container" class="table-responsive mt-0 loading-placeholder">
               <!-- Placeholder content for now -->
               <h3>Coming soon...</h3>
             </div>
           </div>
           <div class="col-md-6 col-12 mb-4">
-            <h1>Player Season Standings</h1>
-            <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading standings...</div>
+            <h1>Player Rankings</h1>
+            <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
 
         </div>
