Added image of Cumulative Scores, temp until JS can be resolved

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -156,8 +156,9 @@
           <div class="col-md-6 col-12 mb-4">
             <h1>Cumulative Scoring</h1>
             <div id="cumulative-scoring-table-container" class="table-responsive mt-0 loading-placeholder">
-              <!-- Placeholder content for now -->
-              <h3>Coming soon...</h3>
+              <img src="/assets/images/CumScores.png" style="width: 100%; max-width: 400px; height: auto;">
+              <!-- Cumulative Scoring table will be injected here by JS -->
+              <!--<h3>Coming soon...</h3>-->
             </div>
           </div>
           <div class="col-md-6 col-12 mb-4">
