--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     }
   </script>
 
+  <!-- GoatCounter Analytics -->
+  <script data-goatcounter="https://sonorangamesaz.goatcounter.com/count"
+          async src="//gc.zgo.at/count.js"></script>
+
   <title> Sonoran Games AZ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
