removed Tony Gh

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -191,8 +191,9 @@
       2025 NFLPool
     </span>
     <br>
+    <span class="created-footer-text">Website Created by</span>
     <a href="https://www.jchleborad.com" target="_blank">
-      <img src="/assets/images/logo-jchleborad.png" alt="JChleborad.com Logo" class="logo-chleb-footer mt-1">
+      <img src="/assets/images/logo-jchleborad.png" alt="JChleborad.com Logo" class="logo-chleb-footer">
     </a>
   </div>
 </footer>
