--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -115,7 +115,7 @@
           <!--REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
