Update for Wee 2

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -110,12 +110,12 @@
           <!--REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn disabled"-->
-          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn disabled" target="_blank">Submit Picks</a>
+          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn" target="_blank">Submit Picks</a>
 
           <!--REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
@@ -174,7 +174,7 @@
       </section>
 
       <section id="player-picks" class="nfl-section text-center" style="display: none;">
-        <h1>Player Picks for Pre-Season Week 1</h1><!--Player Picks for Current Week-->
+        <h1>Player Picks for Pre-Season Week 2</h1><!--Player Picks for Current Week-->
         <div id="player-picks-table-container" class="table-responsive mt-0 loading-placeholder">Loading player picks...</div>
       </section>
     </div>
