--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -141,23 +141,7 @@
         <div id="player-picks-table-container" class="table-responsive mt-0 loading-placeholder">Loading player picks...</div>
       </section>
 
-      <section id="live-matchups" class="nfl-section nfl-matchups text-center">
-        <h1>Pre-Season Week 2 Matchups</h1> <!--This Week's Matchups-->
-        <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">Loading matchups...</div>
-      </section>
-
-      <section id="live-results" class="nfl-section nfl-results text-center">
-        <h1>PreSeason Week 2 Results</h1> <!--This Week's Results-->
-        <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">Loading results...</div>
-      </section>
-
-      <!--SINGLE STANDINGS SECTION
-      <section id="live-standings" class="nfl-section nfl-standings text-center">
-        <h1>Player Standings</h1>
-        <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading standings...</div>
-      </section>
-      -->
-
+      <!--PLAYER SCORING AND RANKINGS-->
       <section class="nfl-section nfl-standings text-center">
         <div class="row">
           <!-- Season Standings -->
@@ -174,9 +158,46 @@
             <h1>Pre-Season Player Rankings</h1><!--Player Rankings-->
             <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
-
         </div>
       </section>
+
+<!--
+      <section id="live-matchups" class="nfl-section nfl-matchups text-center">
+        <h1>Pre-Season Week 2 Matchups</h1> <!--This Week's Matchups
+        <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">Loading matchups...</div>
+      </section>
+
+      <section id="live-results" class="nfl-section nfl-results text-center">
+        <h1>PreSeason Week 2 Results</h1> <!--This Week's Results
+        <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">Loading results...</div>
+      </section>
+
+-->
+
+<!-- LIVE MATCHUPS + RESULTS (side-by-side on md+, stacked on xs) -->
+      <section class="nfl-section text-center">
+        <div class="row">
+          <div class="col-md-6 col-12 mb-4">
+            <div id="live-matchups" class="nfl-matchups h-100">
+              <h1>Pre-Season Week 2 Matchups</h1>
+              <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">
+                Loading matchups...
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-12 mb-4">
+            <div id="live-results" class="nfl-results h-100">
+              <h1>PreSeason Week 2 Results</h1>
+              <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">
+                Loading results...
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
     </div>
   </div>
