Set up regular season Week 1

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -110,12 +110,12 @@
           <!--**SUBMT PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn disabled"-->
-          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn disabled" target="_blank">Submit Picks</a>
+          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn" target="_blank">Submit Picks</a>
 
           <!--**SHOW PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
