Scoring tables title updates

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -122,14 +122,16 @@
       </div>
 
       <div class="text-center mb-0">
-        <a href="https://www.nfl.com/schedules/" class="btn nfl-btn d-inline-flex flex-column align-items-center" target="_blank">
-          <span>2025 NFL Schedule</span>
+        <a href="https://tinyurl.com/NFL-Scores" class="btn nfl-btn d-inline-flex flex-column align-items-center" target="_blank">
+          <span>2025 NFL Schedule & Scores</span>
           <small>(opens new window)</small>
         </a>
+        <!--
         <a href="https://www.nfl.com/scores/" class="btn nfl-btn d-inline-flex flex-column align-items-center" target="_blank">
           <span>Check Live NFL Scores</span>
           <small>(opens new window)</small>
         </a>
+        -->
       </div>
 
       <div id="week-title-container">
@@ -137,7 +139,7 @@
       </div>
 
       <section id="player-picks" class="nfl-section text-center" style="display: none;">
-        <h1>Player Picks for Pre-Season Week 2</h1><!--Player Picks for Current Week-->
+        <h1>Player Picks for Current Week</h1><!--Player Picks for Preseason Week X-->
         <div id="player-picks-table-container" class="table-responsive mt-0 loading-placeholder">Loading player picks...</div>
       </section>
 
@@ -147,7 +149,7 @@
           <!-- Season Standings -->
           <!-- Previous Week Player Results -->
           <div class="col-md-6 col-12 mb-4">
-            <h1>Pre-Season Scoring</h1><!--Cumulative Scoring-->
+            <h1>Cumulative Scoring</h1><!--Pre-Season Scoring-->
             <div id="cumulative-scoring-table-container" class="table-responsive mt-0 loading-placeholder">
               <img src="/assets/images/CumScores.png" style="width: 100%; max-width: 400px; height: auto;">
               <!-- Cumulative Scoring table will be injected here by JS -->
@@ -155,7 +157,7 @@
             </div>
           </div>
           <div class="col-md-6 col-12 mb-4">
-            <h1>Pre-Season Player Rankings</h1><!--Player Rankings-->
+            <h1>Player Rankings</h1><!--Pre-Season Player Rankings-->
             <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
         </div>
@@ -179,16 +181,16 @@
         <div class="row">
           <div class="col-md-6 col-12 mb-4">
             <div id="live-matchups" class="nfl-matchups h-100">
-              <h1>Pre-Season Week 2 Matchups</h1>
+              <h1>Current Week's Games</h1> <!--Pre-Season Week X Games-->
               <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">
-                Loading matchups...
+                Loading Games...
               </div>
             </div>
           </div>
 
           <div class="col-md-6 col-12 mb-4">
             <div id="live-results" class="nfl-results h-100">
-              <h1>PreSeason Week 2 Results</h1>
+              <h1>Current Week's Results</h1> <!--Pre-Season Week X Results-->
               <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">
                 Loading results...
               </div>
