Change Rankings Section
Change the points displayed from overall points totals to the current week's totals

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -158,7 +158,8 @@
             </div>
           </div>
           <div class="col-md-6 col-12 mb-4">
-            <h1>Player Rankings</h1><!--Pre-Season Player Rankings-->
+            <h1>Player Rankings</h1>
+            <h5>Current Week's Points Totals</h5><!--Pre-Season Player Rankings-->
             <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
         </div>
