--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -150,7 +150,7 @@
           <!-- Previous Week Player Results -->
           <div class="col-md-6 col-12 mb-4">
             <h1>Cumulative Scoring</h1><!--Pre-Season Scoring-->
-            <small>(does not include current week's points)</small>
+            <h5>(does not include current week's points)</h5>
             <div id="cumulative-scoring-table-container" class="table-responsive mt-0 loading-placeholder">
               <img src="/assets/images/CumScores.png" style="width: 100%; max-width: 400px; height: auto;">
               <!-- Cumulative Scoring table will be injected here by JS -->
