--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -110,12 +110,12 @@
           <!--**SUBMT PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn disabled"-->
-          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn disabled" target="_blank">Submit Picks</a>
+          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn" target="_blank">Submit Picks</a>
 
           <!--**SHOW PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
@@ -150,7 +150,7 @@
           <!-- Previous Week Player Results -->
           <div class="col-md-6 col-12 mb-4">
             <h1>Cumulative Scoring</h1><!--Pre-Season Scoring-->
-            <h5>(does not include current week's points)</h5>
+            <h5>(Through Week 2)</h5>
             <div id="cumulative-scoring-table-container" class="table-responsive mt-0 loading-placeholder">
               <img src="/assets/images/CumScores.png" style="width: 100%; max-width: 400px; height: auto;">
               <!-- Cumulative Scoring table will be injected here by JS -->
@@ -159,7 +159,7 @@
           </div>
           <div class="col-md-6 col-12 mb-4">
             <h1>Player Rankings</h1>
-            <h5>Current Week's Points Totals</h5><!--Pre-Season Player Rankings-->
+            <h5>Week 2 Point Totals</h5><!--Pre-Season Player Rankings-->
             <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
         </div>
