--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -110,12 +110,12 @@
           <!--**SUBMT PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn disabled"-->
-          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn" target="_blank">Submit Picks</a>
+          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn disabled" target="_blank">Submit Picks</a>
 
           <!--**SHOW PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
@@ -183,16 +183,16 @@
         <div class="row">
           <div class="col-md-6 col-12 mb-4">
             <div id="live-matchups" class="nfl-matchups h-100">
-              <h1>Current Week's Games</h1> <!--Pre-Season Week X Games-->
+              <h1>Week 3 Games</h1> <!--Pre-Season Week X Games-->
               <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">
                 Loading Games...
-              </div>
+               </div>
             </div>
           </div>
 
           <div class="col-md-6 col-12 mb-4">
             <div id="live-results" class="nfl-results h-100">
-              <h1>Current Week's Results</h1> <!--Pre-Season Week X Results-->
+              <h1>Week 3 Results</h1> <!--Pre-Season Week X Results-->
               <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">
                 Loading results...
               </div>
