Update Show Player Picks
Edited code to disable player picks button

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -115,8 +115,8 @@
           <!--**SHOW PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
-          <i class="fas fa-angle-double-left arrow-icon" disabled></i>
+          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
+          <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
       </div>
