Update NFL pool for Week 15
Toggle buttons and update section headers

--- a/pages/nflpool.html
+++ b/pages/nflpool.html
@@ -110,12 +110,12 @@
           <!--**SUBMT PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn disabled"-->
-          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn disabled" target="_blank">Submit Picks</a>
+          <a href="https://forms.gle/JzKvcxXrCzPQGc7t5" class="btn nfl-btn" target="_blank">Submit Picks</a>
 
           <!--**SHOW PICKS BUTTON** - REMOVE "disabled" TO ACTIVATE BUTTON. ADD BACK IN TO DEACTIVEATE
           BUTTON ENABLED:  class="btn nfl-btn">
           BUTTON DISABLED:  class="btn nfl-btn" disabled>-->
-          <button id="toggle-picks-btn" class="btn nfl-btn">Show Player Picks</button>
+          <button id="toggle-picks-btn" class="btn nfl-btn" disabled>Show Player Picks</button>
           <i class="fas fa-angle-double-left arrow-icon"></i>
           
         </div>
@@ -139,7 +139,7 @@
       </div>
 
       <section id="player-picks" class="nfl-section text-center" style="display: none;">
-        <h1>Player Picks for Week 14</h1><!--Player Picks for Preseason Week X-->
+        <h1>Player Picks for Week 15</h1><!--Player Picks for Preseason Week X-->
         <div id="player-picks-table-container" class="table-responsive mt-0 loading-placeholder">Loading player picks...</div>
       </section>
 
@@ -159,7 +159,7 @@
           </div>
           <div class="col-md-6 col-12 mb-4">
             <h1>Player Rankings</h1>
-            <h5>Week 14 Point Totals</h5><!--Pre-Season Player Rankings-->
+            <h5>Week 15 Point Totals</h5><!--Pre-Season Player Rankings-->
             <div id="standings-table-container" class="table-responsive mt-0 loading-placeholder">Loading Rankings...</div>
           </div>
         </div>
@@ -183,7 +183,7 @@
         <div class="row">
           <div class="col-md-6 col-12 mb-4">
             <div id="live-matchups" class="nfl-matchups h-100">
-              <h1>Week 14 Games</h1> <!--Pre-Season Week X Games-->
+              <h1>Week 15 Games</h1> <!--Pre-Season Week X Games-->
               <div id="matchup-table-container" class="table-responsive mt-0 loading-placeholder">
                 Loading Games...
                </div>
@@ -192,7 +192,7 @@
 
           <div class="col-md-6 col-12 mb-4">
             <div id="live-results" class="nfl-results h-100">
-              <h1>Week 14 Results</h1> <!--Pre-Season Week X Results-->
+              <h1>Week 15 Results</h1> <!--Pre-Season Week X Results-->
               <div id="results-table-container" class="table-responsive mt-0 loading-placeholder">
                 Loading results...
               </div>
